--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-cors": "0.0.16",
     "koa-logger": "^3.2.1",
     "koa-router": "^10.0.0",
+    "koa-sslify": "^5.0.0",
     "typescript": "^4.2.4"
   }
 }
